Fix footer overlapping with project navigation bar on mobile

--- a/components/projectnav.module.css
+++ b/components/projectnav.module.css
@@ -88,6 +88,7 @@
     background-color: var(--color-background-paper);
     border-top: 2px solid black;
     padding-bottom: env(safe-area-inset-bottom);
+    transition: bottom 0.1s ease;
   }
 
   .item-prev {
